--- a/pages/delivery/index.wxml
+++ b/pages/delivery/index.wxml
@@ -10,7 +10,7 @@
       </view>
     </view>
 
-    <view class="content" style="bottom: {{shopcarVisibility == 'show'?'100rpx':'0rpx'}}">
+    <view class="content" style="bottom: {{shopCar.goodCount > 0 ?'100rpx':'0rpx'}}">
       <scroll-view class="category bg_grey" scroll-y="true">
         <view bindtap='typeCLick' wx:key="{{item.id}}" data-item='{{item}}' class="globle_text_2 {{item.id == currentType.id?'bg_white text_color_orange':'text_color_grey'}}" wx:for="{{dataList}}">
           {{item.name}}
